Cambio de Status de Amigos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hello my friends, this is robert, nice to meet you.
+    <p>Hello my dear friends, this is robert, nice to meet you.
        If you need anything, please be welcome to ask me.
     </p>
 </body>
